# Movement_Optimizer

./: .ci_trigger.py  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Launch-Movement-Optimizer.bat  MO_issues.json  README.md  SECURITY.md  SPEC.md  clean_patch.py  docker-compose.yml  fix_ci.py  fix_multiline.py  issue100.txt  issue101.txt  issue103.txt  launch-movement-optimizer.sh  model_pack.yaml  mypy.txt  mypy_out.txt  output.json  pr385.json  pr386.json  pr387.json  pyproject.toml  pytest_output.txt  requirements-lock.txt  ruff_out.txt  run.py  sha.txt  split_trajectory.py  test_qt_import.py  tool_pack.yaml
.Jules/: palette.md
.gaai/: agents  contexts  scripts  skills  workflows
.github/: CODEOWNERS  assessment-refresh-marker.txt  labeler.yml
.github/workflows/: Comment-to-Issue-Converter.yml  Jules-Control-Tower.yml  Jules-Issue-Resolver.yml  Jules-PR-Compiler.yml  anti-phantom-merge.yml  ci-failure-digest.yml  ci-standard.yml  dco.yml  lint-workflow-files.yml  local-only-runner-guard.yml  nightly.yml  pr-auto-labeler.yml  stale-cleanup.yml
.jules/: bolt.md  palette.md  sentinel.md
assessments/: 2026-04-26-A-project-organization.md  2026-04-26-B-documentation.md  2026-04-26-C-testing.md  2026-04-26-D-reliability.md  2026-04-26-E-performance.md  2026-04-26-F-code-quality.md  2026-04-26-G-dependency-mgmt.md  2026-04-26-H-security.md  2026-04-26-I-configuration.md  2026-04-26-J-observability.md  2026-04-26-K-maintainability.md  2026-04-26-L-cicd.md  2026-04-26-M-deployment.md  2026-04-26-N-legal.md  2026-04-26-O-agentic-usability.md  2026-04-26-comprehensive-assessment.json  2026-04-26-comprehensive-assessment.md  2026-05-07-A-project-organization.md  2026-05-07-B-documentation.md  2026-05-07-C-testing.md  2026-05-07-D-error-handling.md  2026-05-07-E-performance.md  2026-05-07-F-code-quality.md  2026-05-07-G-dependency-hygiene.md  2026-05-07-H-security.md  2026-05-07-I-configuration-management.md  2026-05-07-J-observability.md  2026-05-07-K-maintenance-debt.md  2026-05-07-L-ci-cd.md  2026-05-07-M-deployment.md  2026-05-07-N-legal-and-compliance.md  2026-05-07-O-agentic-usability.md  2026-05-07-comprehensive-assessment.json  2026-05-07-comprehensive-assessment.md  created_issues.json  evidence.json  evidence_A.txt  evidence_B.txt  evidence_C.txt  evidence_D.txt  (+12 more)
benchmarks/: README.md
docs/adr/: 001-use-lagrangian-dynamics.md  002-python-first-physics-backend-boundary.md  README.md
docs/assessments/: A-N_Assessment_2026-04-02.md  A-N_Assessment_2026-04-04.md  A-N_Assessment_2026-04-09.md  A-N_Assessment_2026-04-10.md  A-N_Assessment_2026-04-11.md  A-N_Assessment_2026-04-17.md  Assessment_A_Code_Structure.md  Assessment_B_Documentation.md  Assessment_C_Test_Coverage.md  Assessment_D_Error_Handling.md  Assessment_E_Performance.md  Assessment_F_Security.md  Assessment_G_Dependencies.md  Assessment_H_CI_CD.md  Assessment_I_Code_Style.md  Assessment_J_API_Design.md  Assessment_K_Data_Handling.md  Assessment_L_Logging.md  Assessment_M_Configuration.md  Assessment_N_Scalability.md  Assessment_O_Maintainability.md  Comprehensive_Assessment.md  ISSUES_TO_CREATE.md  README.md  assessment_summary.json  initial_assessment.md
docs/development/: deep-traversal-hotspots-20260422.md
docs/typing/: type-ignore-suppressions.md  type_ignore_suppressions.json
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: lib.rs
scripts/: __init__.py  check_local_only_workflows.py  check_type_ignore_suppressions.py  install_nightly_system_deps.py  movement_provider_manifest.py  provider_manifest.py  setup_dev.py
src/movement_optimizer/: __init__.py  __main__.py  _gui_impl.py  backend.py  cli.py  comparison.py  config.py  constants.py  errors.py  export.py  export_excel.py  gui.py  health.py  i18n.py  import_results.py  models.py  observability.py  persistence.py  rendering.py  result_analysis.py  spine_loads.py  strength.py  theme_bridge.py  tool_pack.py  trajectory.py  validation.py
src/movement_optimizer/exercises/: __init__.py  _common.py  clean.py  gait.py  jerk.py  sit_to_stand.py  snatch.py
src/movement_optimizer/exercises_3d/: __init__.py  _common.py  bench3d.py  clean3d.py  deadlift3d.py  jerk3d.py  snatch3d.py  squat3d.py
src/movement_optimizer/gui/: __init__.py  _sidebar_builders.py  _sidebar_state.py  anim_renderer.py  animation_control.py  app_icon.py  bilateral_3d_renderer.py  commands.py  comparison_dialog.py  comparison_mixin.py  exercise_tab.py  file_operations.py  help_dialog.py  labelled_slider.py  main_window.py  motion_analysis_panel.py  motion_tabs.py  optimization_mixin.py  parameter_sidebar.py  playback_controls.py  plot_renderer.py  session_state.py  stylesheet.py  ui_builder.py  vector_overlay.py  wheel_blocker.py  widgets.py
src/movement_optimizer/locale/: movement_optimizer_de.ts
src/movement_optimizer/models/: __init__.py  bench_press_model.py  bilateral_3d.py  body_model.py  chain_dynamics.py  chain_forces.py  exercise_configs.py  lagrangian_balance.py  lagrangian_batch.py  lagrangian_dynamics.py  lagrangian_kinematics.py  swingset.py  swingset_forces.py
src/movement_optimizer/three_d/: __init__.py  body3d.py  bos3d.py  (+4 more)
tests/: __init__.py  conftest.py  test_anim_renderer.py  test_animation_control.py  test_bench_press.py  test_benchmarks.py  test_bilateral_3d.py  test_bilateral_3d_renderer.py  test_body3d.py  test_bos3d.py  test_centralized_constants.py  test_chain_forces.py  test_cli.py  test_commands.py  test_comparison.py  test_dynamics3d.py  test_dynamics_guards.py  test_edge_cases.py  test_errors.py  test_exercise_tab.py  test_exercises.py  test_exercises3d.py  test_export.py  test_export_excel.py  test_gait_sts.py  test_gui_widgets.py  test_health.py  test_help_dialog.py  test_hypothesis.py  test_i18n.py  test_import.py  test_install_nightly_system_deps.py  test_issue_217_decompose.py  test_issue_222_decompose.py  test_issue_247_split_optimizer.py  test_joint_limits.py  test_main_window.py  test_math3d.py  test_models.py  test_motion_analysis_panel.py  (+34 more)
(+16 files in other folders)
